<resources>
    <!--Main-->
    <string name="app_name">Anabeesh</string>
    <string name="error_network">حدث خطأ بالإتصال, برجاء إعادة المحاوله</string>
    <string name="error_communicating_with_server">حدث خطأ اثناء الاتصال</string>

    <!--Registration-->
    <string name="login"><b>تسجيل الدخول</b></string>
    <string name="register"><b>تسجيل</b></string>
    <string name="new_account">حساب جديد</string>
    <string name="first_name">الإسم الأول</string>
    <string name="last_name">الإسم الأخير</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="email_format_error">البريد الإلكتروني غير صحيح</string>
    <string name="password_format_error">يحب ان تتكون كلمه المرور من 6 حروف و تحتوى على حرف صغير و كبير</string>
    <string name="first_name_format_error"> الاسم الاول غير صحيح</string>
    <string name="last_name_format_error"> الاسم الاخير غير صحيح</string>
    <string name="match_format_error">كلمات المرور غير متطابقة</string>
    <string name="phone_number_format_error">رقم الهاتف غير صحيح</string>
    <string name="user_already_exists">هذا رقم او البريد الإلكتروني مسجل من قبل</string>
    <string name="connection_error">خطأ بالشبكة</string>
    <string name="registering">جاري التسجيل..</string>
    <string name="please_enter_phone_number">من فضلك إدخل رقم الهاتف</string>
    <string name="please_enter_password">من فضلك أدخل كلمه المرور</string>
    <string name="please_enter_first_name">من فضلك ادخل الأسم الأول</string>
    <string name="please_enter_last_name">من فضلك ادخل الأسم الأخير</string>
    <string name="please_enter_email_reg">من فضلك ادخل البريد الإلكترونى</string>
    <string name="please_enter_confirm_password">من فضلك ادخل تأكيد كلمه المرور</string>

    <!--Login-->
    <string name="forget_password">نسيت كلمه المرور ؟</string>
    <string name="please_fill_data">من فضلك املأ جميع البيانات</string>
    <string name="password_format_error_login">كلمه مرور غير صحيحة</string>

    <!--Host-->
    <string name="notifications">الاشعارات</string>
    <string name="search">بحث</string>
    <string name="drawer_open">مفتوح</string>
    <string name="drawer_close">مغلق</string>
    <string name="home">الرئيسية</string>
    <string name="bookmarks">المحفوظات</string>
    <string name="interests">الاهتمامات</string>
    <string name="join_us">انضم الينا</string>
    <string name="settings">الاعدادات</string>

    <!--Home-->
    <string name="articles">مقالات</string>
    <string name="categories">مجالات</string>
    <string name="following">متابع</string>
    <string name="follow">تابع</string>
    <string name="more">المزيد</string>
    <string name="articles_details">تفاصيل المقال</string>
    <string name="top_rated_questions">الاسئلة الاكثر تقييما</string>
    <string name="newest_questions">جديد</string>
    <string name="question_details">تفاصيل السؤال</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="logout">تسجيل خروج</string>
    <string name="search_here">ابحث هنا…</string>
    <string name="what_s_on_your_mind">تفاصيل السؤال</string>
    <string name="post">أرسل</string>
    <string name="question_headline">العنوان</string>
    <string name="choose_category">اختر فئة السؤال</string>
</resources>
