<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTopLoginImageView"
        android:layout_marginTop="@dimen/marginTopLoginImageView"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/LoginTextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginLoginTextView"
        android:layout_marginTop="@dimen/marginLoginTextView"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/btn_new_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/btn_new_account"
        style="@style/LoginTextViewTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginBottom="@dimen/marginTopLoginImageView"
        android:layout_marginTop="@dimen/marginLoginTextView"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_account"
        android:textColor="@color/colorTextSecondaryLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_login"
        app:layout_constraintTop_toTopOf="@id/tv_login" />

    <com.rxmuhammadyoussef.core.widget.rxedittext.email.EmailEditText
        android:id="@+id/et_email"
        style="@style/LoginEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottomLoginEditText"
        android:layout_marginEnd="@dimen/marginEndLoginEditText"
        android:layout_marginStart="@dimen/marginStartLoginEditText"
        android:layout_marginTop="@dimen/marginLoginTextView"
        android:drawableStart="@drawable/log_in_mail_icon"
        android:hint="@string/email"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <com.rxmuhammadyoussef.core.widget.rxedittext.password.PasswordEditText
        android:id="@+id/et_password"
        style="@style/LoginEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottomLoginEditText"
        android:layout_marginEnd="@dimen/marginEndLoginEditText"
        android:layout_marginStart="@dimen/marginStartLoginEditText"
        android:drawableStart="@drawable/log_in_password_icon"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <Button
        android:id="@+id/btn_login"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottomLoginEditText"
        android:layout_marginEnd="@dimen/marginEndLoginEditText"
        android:layout_marginStart="@dimen/marginStartLoginEditText"
        android:elevation="4dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/tv_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/LoginTextViewTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container_snackbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>